--- a/projeto-site/index.html
+++ b/projeto-site/index.html
@@ -8,11 +8,11 @@
 <body>
   <main>
     <header>
-      <h1>Título do Site</h1>
+      <h1>Cursos Grátis</h1>
     </header>
       <article>
-        <h2>Artigo 001</h2>
-        <p>Texto Artigo 001</p>
+        <h2>Curso de HTML5 com CSS</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, consequuntur officiis ad recusandae ab laborum sint totam? Cupiditate voluptates aspernatur repellendus beatae, amet autem adipisci. Corrupti itaque porro esse doloremque!</p>
       </article>
       <article>
         <h2>Artigo 002</h2>
