--- a/projeto-site/index.html
+++ b/projeto-site/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso em Vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <url>https://cadumega.github.io/projeto-site/</url>
 </head>
 <body>
     <main>
